@@ -1,3 +1,7 @@
+2015-06-06  Per Bothner  <per@bothner.com>
+
+	* ELisp.java (main): Update for new processArgs behavior.
+
 2014-09-04  Per Bothner  <per@bothner.com>
 
 	* MiscOps.scm (if): Update renamed syntax-error -> report-syntax-error.
